--- a/exercise01/pom.xml
+++ b/exercise01/pom.xml
@@ -36,7 +36,13 @@
       <artifactId>spring-oxm</artifactId>
       <version>4.0.0.RELEASE</version>
     </dependency>
-
+    
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.3.18</version>
+    </dependency>
+    
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
